Fix fonts The font rules from bootstrap were forgotten. The font was too big, causing the schedule time slots to wrap in an ugly manner.

--- a/clubWebsite/static/stylesheets/hackathon.css
+++ b/clubWebsite/static/stylesheets/hackathon.css
@@ -2,6 +2,16 @@
     box-sizing: border-box;
 }
 
+:root{
+    --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+}
+
+html{
+    font-family: sans-serif;
+    line-height: 1.15;
+}
+
 p{
     /* stop overflow when screen is small */
     overflow-wrap: break-word;
@@ -34,8 +44,10 @@ body {
     min-height: 100vh;
     padding: 0px;
     margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
+
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
     line-height: 1.5;
 }
 
